--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,12 +11,39 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Figtree&display=swap">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
+    <link rel="stylesheet" type="text/css" href="css/icon_style.css">
+    <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
     <title>Home page</title>
 </head>
 
 <body>
     <header>
-
+        <nav class="header navbar navbar-expand-lg bg-body-tertiary shadow p-2">
+            <div class="container-fluid">
+                <div class="menu">
+                    <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <span class="navbar-text">
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav">
+                            <li class="nav-item font chocolate-brown">
+                                <a class="nav-link" href="#"><b>Entrar</b></a>
+                            </li>
+                            <li class="nav-item font chocolate-brown">
+                                <a class="nav-link" href="#"><b>Cadastrar</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <img src="img/icon-dark-mode-black.png" class="icon nav-link">
+                            </li>
+                        </ul>
+                    </div>
+                </span>
+            </div>
+        </nav>
     </header>
 </body>
 
