--- a/src/views/signup_2.ejs
+++ b/src/views/signup_2.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=d, initial-scale=1.0">
@@ -13,17 +12,22 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
-    <title>Home page</title>
+    <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <title>Cadastrar</title>
 </head>
-
 <body>
-    <header>
-        dsfgdsfdasffds
-        <a href="/login">LOGIN</a>
-        <a href="/signup-1">SIGNUP 1</a>
-        <a href="/signup-2">SIGNUP 2</a>
-        <a href="/signup-3">SIGNUP 3</a>
-    </header>
+    <a href="/"><img src="/img/arrow-back.png" class="back"></a>
+    <div class="bg-img sign">
+        <div class="container">
+            <span class="font superbold big green">CADASTRAR</span>
+            <form>
+                <input type="text" placeholder="Nome completo" required>
+                <input type="date" required>
+                <a class="font small bod info" href="">Sua data de nascimento</a>
+                <button type="submit">Cadastrar</button>
+            </form>
+        </div>
+        
+    </div>
 </body>
-
 </html>
