--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,10 +33,10 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav">
                             <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="#"><b>Entrar</b></a>
+                                <a class="nav-link" href="/login"><b>Entrar</b></a>
                             </li>
                             <li class="nav-item font chocolate-brown">
-                                <a class="nav-link" href="#"><b>Cadastrar</b></a>
+                                <a class="nav-link" href="/signup-1"><b>Cadastrar</b></a>
                             </li>
                             <li class="nav-item">
                                 <img src="img/icon-dark-mode-black.png" class="icon nav-link">
@@ -48,16 +48,17 @@
         </nav>
     </header>
     <main>
+        <h1>Crie, compartilhe e organize <br> Seu planejamento alimentar em um só lugar!</h1>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/home-profile.png" class="d-block w-100" alt="...">
+                <img src="img/recipes.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="..." class="carousel-image d-block w-100" alt="...">
+                <img src="img/recipes.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="img/recipes.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
