Started home page

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/icon_style.css">
     <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <title>Home page</title>
 </head>
 
@@ -47,11 +48,16 @@
             </div>
         </nav>
     </header>
-    dsfgdsfdasffds
-    <a href="/login">LOGIN</a>
-    <a href="/signup-1">SIGNUP 1</a>
-    <a href="/signup-2">SIGNUP 2</a>
-    <a href="/signup-3">SIGNUP 3</a>
+    <main>
+        <div class="section">
+            <aside>
+                <div class="box"></div>
+            </aside>
+            <article>
+                <div class="box"></div>
+            </article>
+        </div>
+    </main>
 </body>
 
 </html>
