--- a/public/css/nav_bar_style.css
+++ b/public/css/nav_bar_style.css
@@ -4,6 +4,8 @@
     position: fixed;
     width: 100%;
     height: 90px;
+
+    box-shadow: 0 5px 5px rgba(70, 36, 4, 0.3);
 }
 
 .menu {
@@ -12,3 +14,6 @@
     justify-content: space-between;
 }
 
+.navbar-toggler {
+    border: 2px solid ;
+}
