working carousel on index page

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/icon_style.css">
     <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <title>Home page</title>
 </head>
 
@@ -48,7 +49,9 @@
         </nav>
     </header>
     <main>
-        <h1>Crie, compartilhe e organize <br> Seu planejamento alimentar em um só lugar!</h1>
+        <div class="font big-title green bold">
+            Crie, compartilhe e organize <br> Seu planejamento alimentar em um só lugar!
+        </div>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
