--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -3,9 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/font_style.css">
+    <link rel="stylesheet" type="text/css" href="css/icon_style.css">
+    <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
+    <link rel="stylesheet" type="text/css" href="css/view_recipes_style.css">
     <title>Document</title>
 </head>
 <body>
-    oi
+    <header>
+        <nav class="header navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="menu">
+                    <a class="navbar-brand" href="/"><img src="img/logo-white-green.png" class="logo-icon"></a>
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link font white" href="/login"><b> </b></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <span class="navbar-text">
+                    <div class="collapse navbar-collapse" id="navbarText">
+                        <ul class="navbar-nav">
+                            <li class="nav-item font chocolate-brown">
+                                <a class="nav-link" href="/login"><b>Sair</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <img src="img/icon-dark-mode-black.png" class="icon nav-link">
+                            </li>
+                        </ul>
+                    </div>
+                </span>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="box">
+            <div class="view-recipes-items">
+                <div>
+                    foto Maria Carolina Bevervanso
+                    5 receitas
+                    receita privada
+                    foto
+                    ingredientes
+                </div>
+                <div>
+                    Titulo
+                    tempo
+                    tipos e refeiçoes
+                    descricao
+                    modo de preparo
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
