working on view recipes page, 20% done

--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/view_recipes_style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav class="header navbar navbar-expand-lg bg-body-tertiary">
@@ -53,24 +55,29 @@
         </nav>
     </header>
     <main>
-        <div class="box">
-            <div class="view-recipes-items">
-                <div>
-                    foto Maria Carolina Bevervanso
-                    5 receitas
-                    receita privada
-                    foto
-                    ingredientes
+        <div class="view-recipes-box">
+            <div>
+                <img>
+                <div class="view-recipes-header">
+                    <div class="view-recipes-username">
+                        <span class="font chocolate-brown bold big">Maria Carolina Bevervanso </span>
+                        <span class="font yellow bold">@Mariasina</span>
+                    </div>
+                    <span class="font small green">5 receitas</span>
+                    <span class="font small bold"><img src="img/icon-private.png"> receita privada</span>
                 </div>
-                <div>
-                    Titulo
-                    tempo
-                    tipos e refeiçoes
-                    descricao
-                    modo de preparo
-                </div>
+                foto
+                ingredientes
+            </div>
+            <div>
+                Titulo
+                tempo
+                tipos e refeiçoes
+                descricao
+                modo de preparo
             </div>
         </div>
     </main>
 </body>
+
 </html>
