--- a/src/views/signup_2.ejs
+++ b/src/views/signup_2.ejs
@@ -22,8 +22,10 @@
             <span class="font superbold big green">CADASTRAR</span>
             <form>
                 <input type="text" placeholder="Nome completo" required>
-                <input type="date" required>
-                <a class="font small bod info" href="">Sua data de nascimento</a>
+                <div>
+                    <input type="date" required>
+                    <a class="font small bod info" href="">Sua data de nascimento</a>
+                </div>
                 <button type="submit">Cadastrar</button>
             </form>
         </div>
