--- a/src/views/signup_3.ejs
+++ b/src/views/signup_3.ejs
@@ -18,12 +18,14 @@
 <body>
     <a href="/"><img src="/img/arrow-back.png" class="back"></a>
     <div class="bg-img sign">
-        <div class="container">
+        <div class="container zero-gap">
             <span class="font superbold big green margin_zero">CONFIRMAR</span>
             <form>
                 <a class="font small bod info " href="">Digite o código de verificação que foi enviado para você por e-mail</a>
-                <input type="text" placeholder="Código" required>
-                <a class="font yellow small bold" href="">Reenviar código</a>
+                <div>
+                    <input type="text" placeholder="Código" required>
+                    <a class="font yellow small bold" href="">Reenviar código</a>
+                </div>
                 <button type="submit">Cadastrar</button>
             </form>
         </div>
