--- a/public/css/sign_style.css
+++ b/public/css/sign_style.css
@@ -15,6 +15,8 @@
     max-width: 90%;
     width: 450px;
 
+    gap: 35px;
+
     padding: 45px;
 
     padding-top: 100px;
@@ -23,9 +25,6 @@
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 }
 
-span {
-    margin-bottom: 15px;
-}
 
 .sign {
     display: flex;
@@ -34,12 +33,22 @@ span {
     align-items: center;
 }
 
+.zero-gap {
+    gap: 0;
+}
+
 form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
+    gap: 35px;
+
+    width: 100%;
+}
+
+form div {
     width: 100%;
 }
 
@@ -50,7 +59,6 @@ input {
     border: 2px solid #5C5E22;
     padding: 10px;
 
-    margin-top: 30px;
     font-family: 'Figtree', sans-serif;
 }
 
@@ -61,7 +69,6 @@ button {
     background-color: #5C5E22;
     border: 0;
 
-    margin-top: 45px;
     font-family: 'Figtree', sans-serif;
     font-size: 1.2rem;
     font-weight: 700;
