--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,13 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/icon_style.css">
     <link rel="stylesheet" type="text/css" href="css/nav_bar_style.css">
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
+    <link rel="stylesheet" type="text/css" href="css/sign_style.css">
     <title>Home page</title>
 </head>
 
@@ -51,7 +53,30 @@
     <main>
         <div class="section">
             <aside>
-                <div class="box"></div>
+                <div class="box profile">
+                    <img src="/img/maria-c.jpg" class="profile-img">
+                    <div class="profile-text">
+                        <div class="profile-text">
+                            <span class="font chocolate-brown superbold">Maria Carolina</span>
+                            <span class="font green small">1 receitas</span>
+                        </div>
+                        <div class="profile-text">
+                            <div class="followers">
+                                <img src="/img/people-icon.png">
+                                <span class="font chocolate-brown small">503 seguidores</span>
+                            </div>
+                            <button class="button small bold">Visualizar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date-header">
+                        <span class="font chocolate-brown superbold small">Hoje - 01/04</span>
+                        <a href=""><img src="/img/eye-icon.png" alt=""></a>
+                    </div>
+                    <div class="meal font small">Café da manhã</div>
+                </div>
+
             </aside>
             <article>
                 <div class="box"></div>
