working on view recipe page, 50% done

--- a/public/css/view_recipes_style.css
+++ b/public/css/view_recipes_style.css
@@ -1,24 +1,69 @@
-.view-recipes-box {
+.recipes-box {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 20px;
 
     border-radius: 20px;
     border: 2px solid #5C5E22;
 
     padding: 45px;
+
+    flex-wrap: wrap;
 }
 
 .view-recipes-header {
     display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.view-recipes-header-text {
+    display: flex;
     flex-direction: column;
+
+}
+
+.view-recipes-left {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .view-recipes-username {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 20px;
     align-items: center;
+}
+
+.view-recipes-img {
+    object-fit: cover;
+    border: 2px solid #5C5E22;
+
+    width: 100px;
+    height: 100px;
+}
+
+.view-recipes-image-ingredients {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.recipes-img {
+    width: 600px;
+    border-radius: 10px;
+}
+
+.recipes-ingredients-title {
+    align-items: center;
+}
+
+.view-recipes-right {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    max-width: 55%;
+
 }
