--- a/public/css/font_style.css
+++ b/public/css/font_style.css
@@ -26,6 +26,10 @@
     font-size: 1.5rem;
 }
 
+.very-big {
+    font-size: 2.5rem;
+}
+
 .small {
     font-size: 1rem;
 }
@@ -36,6 +40,10 @@
 
 .yellow {
     color: #C08332;
+}
+
+.chocolate-brown {
+    color: #462404;
 }
 
 .info {
@@ -50,10 +58,6 @@
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
-}
-
-.chocolate-brown {
-    color: #462404;
 }
 
 .big-title {
