added icons as green do view recipes

--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -88,10 +88,10 @@
             <div class="view-recipes-right">
                 <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
                 <div>
-                    <img class="icon" src="img/icon-clock.png">
-                    1h30
-                    <img class="icon" src="img/icon-portions.png">
-                    2 porções
+                    <img class="icon" src="img/icon-clock-green.png">
+                    <span class="font green">1h30</span>
+                    <img class="icon" src="img/icon-portions-green.png">
+                    <span class="font green">2 porções</span>
                 </div>
                 <div>
                     <span class="small-box box-green white">Salgado</span>
