Recipe icons are not woking

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -53,6 +53,11 @@
     <main>
         <div class="section">
             <aside>
+                <form action="">
+                    <input type="text" name="" id="" class="box" placeholder="Pesquisar em suas receitas">
+                    <a href=""><img src="/img/filter-icon.png" alt=""></a>
+                </form>
+
                 <div class="box profile">
                     <img src="/img/maria-c.jpg" class="profile-img">
                     <div class="profile-text">
@@ -69,17 +74,64 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="box">
+
+                </div>
+
+                <div class="box gap">
                     <div class="date-header">
                         <span class="font chocolate-brown superbold small">Hoje - 01/04</span>
                         <a href=""><img src="/img/eye-icon.png" alt=""></a>
                     </div>
-                    <div class="meal font small">Café da manhã</div>
+                    <div class="sec">
+                        <div class="meal font small white bold">Café da manhã</div>
+                        <div class="recipes-link">
+                            <a href="" class="font small chocolate-brown bold">Pão de queijo</a>
+                        </div>
+                    </div>
+                    <div class="sec">
+                        <div class="meal font small white bold">Café da manhã</div>
+                        <div class="recipes-link">
+                            <a href="" class="font small chocolate-brown bold">Pão de queijo</a>
+                        </div>
+                    </div>
                 </div>
 
             </aside>
             <article>
-                <div class="box"></div>
+                <div class="recipe box">
+                    <img class="recipe-img"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJMW9td0rU1cZ5IXysJhQ4N_Vv54UexXeFuHunmhm2JfLAaYkR">
+                    <div class="recipe-text">
+                        <span class="chocolate-brown superbold">Pizza de Queijo</span>
+                        <div class="recipe-info">
+                            <div class="icon-info">
+                                <img src="/img/clock-icon.png" alt="clock">
+                                <span class="font small green">1h30min</span>
+                            </div>
+                            <div class="icon-info">
+                                <img src="/img/meal-icon.png" alt="meal">
+                                <span class="font small green">2 porções</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="recipe box">
+                    <img class="recipe-img" src="https://assets.unileversolutions.com/v1/113271749.png">
+                </div>
+                <div class="recipe box">
+                    <img class="recipe-img" src="https://assets.unileversolutions.com/v1/113271659.png">
+                </div>
+                <div class="recipe box">
+                    <img class="recipe-img" src="https://assets.unileversolutions.com/v1/113271759.png">
+                </div>
+                <div class="recipe box">
+                    <img class="recipe-img" src="https://assets.unileversolutions.com/v1/113271747.jpg">
+                </div>
+                <div class="recipe box">
+                    <img class="recipe-img" src="https://assets.unileversolutions.com/v1/113271726.jpg">
+                </div>
             </article>
         </div>
     </main>
