--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -10,6 +10,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 3%;
 }
 
 .box {
@@ -53,12 +54,19 @@ main {
 aside {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 30%;
     gap: 25px;
 }
 
 article {
     width: 70%;
+    height: fit-content;
+    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .button {
@@ -98,4 +106,88 @@ article {
 .meal {
     width: 100%;
     background-color: #C08332;
+    border-radius: 5px;
+    padding: 0 5px;
+}
+
+.gap  {
+    gap: 15px;
+}
+
+.sec {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.recipes-link {
+    display: flex;
+    gap: 5px;
+}
+
+aside form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 10px;
+}
+
+aside form a{
+    height: 45px;
+    padding: 0;
+}
+aside form a img{
+    height: 100%;
+}
+
+aside form input {
+    background-image: url('/img/search-icon.png'); /* Caminho para a imagem da lupa */
+    background-repeat: no-repeat;
+    background-position: right center; /* Posiciona a lupa à direita e centralizada verticalmente */
+    background-size: contain;
+}
+
+.recipe {
+    width: 270px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+
+    padding: 0;
+}
+
+.recipe-text {
+    height: 60%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 5px 10px;
+}
+
+.recipe-img {
+    height: 40%;
+    width: 100%;
+
+    object-fit: cover;
+}
+
+.recipe-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    gap: 7px;
+}
+
+.icon-info {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.icon-info img{
+    height: 90%;
 }
