--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <link rel="stylesheet" type="text/css" href="css/view_recipes_style.css">
     <link rel="stylesheet" type="text/css" href="css/small_box_style.css">
+    <link rel="stylesheet" type="text/css" href="css/display_flex_style.css">
     <title>Document</title>
 </head>
 
@@ -56,21 +57,45 @@
         </nav>
     </header>
     <main>
-        <div class="recipes-box">
-            <div class="view-recipes-left">
-                <div class="view-recipes-header">
-                    <img class="view-recipes-img rounded-circle" src="img/maria-c.jpg">
-                    <div class="view-recipes-header-text">
-                        <div class="view-recipes-username">
-                            <span class="font chocolate-brown bold big">Maria Carolina Bevervanso </span>
-                            <span class="font yellow bold">@Mariasina</span>
+        <div class="recipes-box gap-4">
+            <div class="view-recipes-top flex-row">
+                <div class="view-recipes-header flex-column gap-3">
+                    <div class="flex-row gap-3">
+                        <img class="view-recipes-profile-img rounded-circle" src="img/maria-c.jpg">
+                        <div class="flex-column">
+                            <div class="view-recipes-username flex-row gap-2">
+                                <span class="font chocolate-brown bold big">Maria Carolina Bevervanso </span>
+                                <span class="font yellow bold">@Mariasina</span>
+                            </div>
+                            <span class="font small green">5 receitas</span>
+                            <span class="font small bold"><img src="img/icon-private.png"> receita privada</span>
                         </div>
-                        <span class="font small green">5 receitas</span>
-                        <span class="font small bold"><img src="img/icon-private.png"> receita privada</span>
+                    </div>
+                    <div class="flex-column">
+                        <img class="recipes-img" src="img/pizza.jpg">
                     </div>
                 </div>
-                <div class="view-recipes-image-ingredients">
-                    <img class="recipes-img" src="img/pizza.jpg">
+                <div class="view-recipes-content flex-column gap-2">
+                    <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
+                    <div>
+                        <img class="icon" src="img/icon-clock-green.png">
+                        <span class="font green">1h30</span>
+                        <img class="icon" src="img/icon-portions-green.png">
+                        <span class="font green">2 porções</span>
+                    </div>
+                    <div>
+                        <span class="small-box box-green white">Salgado</span>
+                        <span class="small-box box-yellow white">Quente</span>
+                        <span class="small-box box-brown white">Janta</span>
+                        <span class="small-box box-macchiato white">Almoço</span>
+                    </div>
+                    descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
+                    descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
+                    descrição 
+                </div>
+            </div>
+            <div class="view-recipes-bottom flex-row">
+                <div class="view-recipes-ingredients flex-column">
                     <div class="recipes-ingredients-title">
                         <img class="icon" src="img/icon-ingredients.png">
                         <span class="font chocolate-brown bold big">Ingredientes</span>
@@ -84,26 +109,20 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="view-recipes-right">
-                <h2 class="font chocolate-brown very-big bold">Pizza de Queijo</h2>
-                <div>
-                    <img class="icon" src="img/icon-clock-green.png">
-                    <span class="font green">1h30</span>
-                    <img class="icon" src="img/icon-portions-green.png">
-                    <span class="font green">2 porções</span>
+                <div class="view-recipes-steps flex-column">
+                    <div class="recipes-ingredients-title">
+                        <img class="icon" src="img/icon-ingredients.png">
+                        <span class="font chocolate-brown bold big">Modo de Preparo</span>
+                    </div>
+                    <div class="font chocolate-brown">
+                        <ul>
+                            <li>Passo 1</li>
+                            <li>Passo 2</li>
+                            <li>Passo 3</li>
+                            <li>Passo 4</li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
-                    <span class="small-box box-green white">Salgado</span>
-                    <span class="small-box box-yellow white">Quente</span>
-                    <span class="small-box box-brown white">Janta</span>
-                    <span class="small-box box-macchiato white">Almoço</span>
-                </div>
-                descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
-                descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição descrição 
-                descrição 
-                
-                modo de preparo
             </div>
         </div>
     </main>
