--- a/public/css/view_recipes_style.css
+++ b/public/css/view_recipes_style.css
@@ -1,7 +1,7 @@
 .recipes-box {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    
 
     border-radius: 20px;
     border: 2px solid #5C5E22;
@@ -9,7 +9,6 @@
     padding: 45px;
 
     flex-wrap: wrap;
-    text-align: justify;
 }
 
 .view-recipes-username {
@@ -37,6 +36,12 @@
 
 .view-recipes-content {
     width: 65%;
+    text-align: justify;
+
+}
+
+.recipe-title-and-favorite {
+    justify-content: space-between;
 }
 
 .recipes-img {
@@ -54,6 +59,7 @@
 
 .view-recipes-bottom {
     justify-content: center;
+    text-align: justify;
 
     width: 100%;
     gap: 3%;
@@ -65,4 +71,17 @@
 
 .view-recipes-steps {
     min-width: 65%;
+}
+
+.view-recipes-button {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.edit-button {
+    width: fit-content;
+}
+
+.edit-button button{
+    padding: 5px 50px;
 }
