created edit recipes page and addes to routes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -81,6 +81,7 @@
         <a href="/signup-2">SIGNUP 2</a>
         <a href="/signup-3">SIGNUP 3</a>
         <a href="/view-recipes">VIEW RECIPES</a>
+        <a href="/edit-recipes">EDIT RECIPES</a>
         <div>
 
         </div>
