--- a/src/views/signup_2.ejs
+++ b/src/views/signup_2.ejs
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <title>Cadastrar</title>
 </head>
 <body>
@@ -21,12 +22,12 @@
         <div class="container">
             <span class="font superbold big green">CADASTRAR</span>
             <form>
-                <input type="text" placeholder="Nome completo" required>
+                <input class="width-100" type="text" placeholder="Nome completo" required>
                 <div>
-                    <input type="date" required>
+                    <input class="width-100" type="date" required>
                     <a class="font small bod info" href="">Sua data de nascimento</a>
                 </div>
-                <button type="submit">Cadastrar</button>
+                <button class="width-100" type="submit">Cadastrar</button>
             </form>
         </div>
         
