--- a/src/views/signup_3.ejs
+++ b/src/views/signup_3.ejs
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <title>Confirmar</title>
 </head>
 <body>
@@ -23,10 +24,10 @@
             <form>
                 <a class="font small bod info " href="">Digite o código de verificação que foi enviado para você por e-mail</a>
                 <div>
-                    <input type="text" placeholder="Código" required>
+                    <input class="width-100" type="text" placeholder="Código" required>
                     <a class="font yellow small bold" href="">Reenviar código</a>
                 </div>
-                <button type="submit">Cadastrar</button>
+                <button class="width-100 type="submit">Cadastrar</button>
             </form>
         </div>
         
