--- a/public/css/home_style.css
+++ b/public/css/home_style.css
@@ -4,6 +4,7 @@ main {
     display: flex;
     flex-direction: column;
 
+    min-height: 100vh;
 }
 
 .section {
@@ -164,6 +165,27 @@ aside form input {
     flex-direction: column;
     align-items: flex-start;
     padding: 5px 10px;
+
+    gap: 5px;
+}
+
+.recipe-text button {
+    background-color: transparent;
+    height: fit-content;
+    width: fit-content;
+}
+
+.recipe-text button img {
+    height: 30px;
+}
+
+.favorite {
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 .recipe-img {
@@ -176,18 +198,49 @@ aside form input {
 .recipe-info {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
-    gap: 7px;
+    gap: 20px;
 }
 
 .icon-info {
-    height: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+
+    gap: 5px;
 }
 
 .icon-info img{
-    height: 90%;
+    height: 1.5rem;
+}
+
+.width {
+    width: calc(50% - 3px);
+}
+
+.width-100 {
+    width: 100%;
+}
+
+.rows {
+    gap: 6px;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-more {
+    position: fixed;
+
+    align-self: flex-end;
+    justify-self: center;
+}
+
+.button-more img {
+    height: 70px;
 }
