--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -15,6 +15,7 @@
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <title>Entrar</title>
 </head>
 
@@ -24,12 +25,12 @@
         <div class="container">
             <span class="font superbold big green">ENTRAR</span>
             <form>
-                <input type="text" placeholder="E-mail ou usuário" required>
+                <input class="width-100" type="text" placeholder="E-mail ou usuário" required>
                 <div>
-                    <input type="text" placeholder="Senha" required>
+                    <input class="width-100" type="text" placeholder="Senha" required>
                     <a class="font yellow small bold" href="">Esqueceu sua senha?</a>
                 </div>
-                <button type="submit">Entrar</button>
+                <button class="width-100" type="submit">Entrar</button>
             </form>
         </div>
 
