--- a/src/views/signup_1.ejs
+++ b/src/views/signup_1.ejs
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font_style.css">
     <link rel="stylesheet" type="text/css" href="css/sign_style.css">
+    <link rel="stylesheet" type="text/css" href="css/home_style.css">
     <title>Cadastrar</title>
 </head>
 <body>
@@ -21,11 +22,11 @@
         <div class="container">
             <span class="font superbold big green">CADASTRAR</span>
             <form>
-                <input type="text" placeholder="E-mail" required>
-                <input type="text" placeholder="Nome de usuário" required>
-                <input type="text" placeholder="Senha" required>
-                <input type="text" placeholder="Confirmar Senha" required>
-                <button type="submit">Cadastrar</button>
+                <input class="width-100" type="text" placeholder="E-mail" required>
+                <input class="width-100" type="text" placeholder="Nome de usuário" required>
+                <input class="width-100" type="text" placeholder="Senha" required>
+                <input class="width-100" type="text" placeholder="Confirmar Senha" required>
+                <button class="width-100" type="submit">Cadastrar</button>
             </form>
         </div>
         
